[package]
name = "star_trip"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"
#console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Optimizing for wasm size
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
